maybe it is all right without mistakes in strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,8 @@
         <item>Допрыгай на одной ноге до другого конца комнаты</item>
         <item>Покажи прием ниндзя</item>
         <item>Сделай реверанс, как принцесса.</item>
-        <item>Спой песню на собачьем или кошачьем языке</item>
+        <item>Спой песню на собачьем языке</item>
+        <item>Спой песню на кошачьем языке</item>
         <item>Присядь на одной ноге с вытянутыми руками</item>
         <item>Надень на голову кастрюлю и прыгай на одной ноге</item>
         <item>Подпрыгни 10 раз</item>
@@ -20,7 +21,7 @@
         <item>Надуй щеки и посиди так минуту</item>
         <item>С завязанными глазами накрась соседа помадой</item>
         <item>Пожонглируй тремя предметами</item>
-        <item>Сделай одной ногой круг, при этом противоположной рукой рисуя квадрат</item>
+        <item>Сделай одной ногой круг, при этом противоположной рукой рисуй квадрат</item>
         <item>Встань на четвереньки и изобрази автомобиль, осуществляющий задним ходом параллельную парковку в пространство между двумя стульями</item>
         <item>Изобрази автомобиль который не хочет заводиться</item>
         <item>Расскажи сказку "Репка" от имени репки</item>
@@ -29,7 +30,7 @@
         <item>Изобрази на лице по очереди: радость, гнев, удивление, обиду, смущение</item>
         <item>Сядь верхом на стул и прокричи: "но, лошадка, но"</item>
         <item>Напои с ложечки соседа</item>
-        <item>Пройтись по комнате с книжкой на голове</item>
+        <item>Пройдись по комнате с книжкой на голове</item>
         <item>Изобрази индейца на охоте</item>
         <item>Сложи из бумаги самолётик и запусти его</item>
         <item>Изобрази несущую яйцо курицу</item>
@@ -45,7 +46,7 @@
         <item>Сыграй на кастрюле как на барабане</item>
         <item>Спрячься под стол</item>
         <item>Пропрыгай вокруг стула как лягушка</item>
-        <item>Ляг на спину и крути ногами в воздухе как будто едешь на велосипеде</item>
+        <item>Ляг на спину и крути ногами в воздухе, как будто едешь на велосипеде</item>
         <item>Веди себя как мяч</item>
         <item>Нарисуй солнышко фломастером в зубах</item>
         <item>Проползи как червяк</item>
@@ -53,7 +54,7 @@
         <item>Покажи как играют на пианино пальцами ног</item>
         <item>Покажи что сидишь на невидимом стуле</item>
         <item>Покукарекай 3 раза</item>
-        <item>Зажим нос и скажи:"сегодня я выгляжу прекрасней всех"</item>
+        <item>Зажми нос и скажи:"сегодня я выгляжу прекрасней всех"</item>
         <item>Изобрази робота</item>
         <item>Изобрази сломанного робота</item>
         <item>Притворись воздушным шариком и полетай</item>
